<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:weightSum="9">


        <EditText
            android:id="@+id/etUrlInput"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:hint="@string/url_input"
            android:inputType="textUri"
            android:gravity="bottom|center_horizontal" />

        <EditText
            android:id="@+id/etTimeInput"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:hint="@string/text_time_input"
            android:inputType="number"
            android:gravity="bottom|center_horizontal" />

        <EditText
            android:id="@+id/etTimeClose"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:hint="@string/text_time_close"
            android:inputType="number"
            android:gravity="bottom|center_horizontal" />


        <TextView
            android:id="@+id/twNextLoad"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
           android:layout_weight="1"
            android:text="@string/next_load_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center|center_horizontal" />

        <TextView
            android:id="@+id/twLoadDate"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:text="@string/next_date_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnStartStopService"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_start_service"
                android:gravity="center" />
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>
</RelativeLayout>
